fix(agent): bound launch exit wait by stage budget and add discovery diagnostics
#454: derive PROCESS_ALIVE vs AGENT_BOOTSTRAP from remaining agentBootstrapMs
and the failure kind instead of raising PROCESS_EXIT_GRACE_MS.
AttachNotSupportedException / AgentLoadException wait remaining budget;
dynamic-agent-loading-disabled fails fast. The pre-load retry loop stays the
handshake-race path — a terminal attach failure is an exit wait, not another
attach attempt.

#458: opt-in Gradle app-JVM discovery diagnostics (off by default) capture
the candidate list, start instants, launch boundary, and leftover rejection.
No start-time gate or matching change.

Fixes #454
Fixes #458